package pt.tpereira.cashierhelper.view;

import android.content.Context;
import android.view.View;

public class ProductsView extends View {

    public ProductsView(Context context) {
        super(context);
    }
}
