@startuml

title __APP's Class Diagram__\n

  namespace pt.tpereira.cashierhelper {
    class BuildConfig {
    }
  }
  

  namespace pt.tpereira.cashierhelper {
    class CashierController {
    }
  }
  

  namespace pt.tpereira.cashierhelper {
    namespace view {
      class CharsView {
      }
    }
  }
  

  namespace pt.tpereira.cashierhelper {
    namespace model {
      class DBManager {
      }
    }
  }
  

  namespace pt.tpereira.cashierhelper {
    namespace model {
      class Product {
      }
    }
  }
  

  namespace pt.tpereira.cashierhelper {
    namespace view {
      class ProductsView {
      }
    }
  }
  

  pt.tpereira.cashierhelper.CashierController -up-|> android.support.v7.app.AppCompatActivity
  pt.tpereira.cashierhelper.CashierController o-- pt.tpereira.cashierhelper.model.DBManager : dataBase
  pt.tpereira.cashierhelper.view.CharsView -up-|> android.view.View
  pt.tpereira.cashierhelper.model.ProductsMapper -up-|> android.view.View


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
